Fixed scrollbar caused by visibility labels

--- a/assets/rs-utility-blocks.css
+++ b/assets/rs-utility-blocks.css
@@ -77,9 +77,9 @@ body:not(.front-end) .block-editor-block-list__layout .block-editor-block-list__
 body:not(.front-end) .has-visibility::before {
 	content: 'Visibility';
 	position: absolute;
-	top: calc( 100% + 2px );
-	left: -4px;
-	right: -4px;
+	top: calc( 100% + 1px );
+	left: 0;
+	right: 0;
 	width: auto;
 	height: 1.5em;
 	z-index: 25;
